--- a/Chronologie.html
+++ b/Chronologie.html
@@ -44,6 +44,10 @@
       <div class="navs">
         <a href="Bibliographie.html">Bibliographie</a>
       </div>
+
+      <div class="'navs">
+        <a href="article.pdf" target="_blank">Article</a>
+      </div>
     </nav>
 
   </header>
@@ -173,11 +177,8 @@
   <footer>
     <div class="footer-container">
       <div class="bold-text">
-        <p>Polytech Montpellier décline toute responsabilité pour les erreurs et les imprécisions que ce
-          site pourrait contenir.</p>
-          
-        <p>Pour signaler une erreur ou demander une modification, merci d’écrire à l’adresse suivante :
-          amina.otmani@etu.umontpellier.fr </p>
+        <p>Le site web suivant est un exercice réalisé par des élèves de 3ème année de l’école Polytech Montpellier dans le cadre du cours d’introduction au système d’information du département IG. Ces sites sont le résultat de travail d’étudiants et sont mis en ligne pour des raisons pédagogiques et didactiques; une fois en ligne, ils ne sont plus mis à jour. Vos réactions et commentaires sont très bienvenus. Pour signaler une erreur ou demander une modification du site web, merci d'écrire à "amina.otmani@etu.umontpellier.fr", et à la responsable de l’enseignement (isabelle.bourdon@umontpellier.fr). </p>
+        <p>Polytech Montpellier décline toute responsabilité pour les erreurs et les imprécisions que peuvent contenir ces sites</p>
       </div>
     </div>
   </footer>
