--- a/Bibliographie.html
+++ b/Bibliographie.html
@@ -189,6 +189,13 @@
         <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Adc&amp;rft.type=webpage&amp;rft.title=Surexposition%20aux%20%C3%A9crans%20-%20e-Enfance&amp;rft.identifier=https%3A%2F%2Fe-enfance.org%2Finformer%2Fsurexposition-aux-ecrans%2F%3Fgad_source%3D1%26gclid%3DCjwKCAiAg8S7BhATEiwAO2-R6qu_dNXTHADlz92PNmpWyW9k1NkZ2KWTXG0HI6SDNQnhK6E81lAY8hoCO4oQAvD_BwE"></span>
         </section>
         </div>
+
+        <section>
+          <h6>
+            L'IA a été d'une grande aide pour le design et la mise en page du site.
+            
+          </h6>
+        </section>
         
     </section>
 
