--- a/Bibliographie.html
+++ b/Bibliographie.html
@@ -55,7 +55,7 @@
   <main class="bibliographie">
     <br><br><br><br>
     <h1>Bibliographie</h1>
-    <p>Nous avons mis, trié par partie, les ressources bibliographiques qui nous ont permis de réaliser ce site web.</p>
+    <p>Nous avons mis, triées par partie, les ressources bibliographiques qui nous ont permis de réaliser ce site web.</p>
     <p>Nous avons utilisé Zotero, style : Chicago Manuel (Author-date).</p>
 
     <section>
