--- a/Chronologie.html
+++ b/Chronologie.html
@@ -164,7 +164,7 @@
 
       <div class="timeline-item">
         <div class="timeline-content">
-            <h3>janvier 2024 - Commission d'experts sur l'impacts des l'exposition des jeunes aux écrans</h3>
+            <h3>janvier 2024 - Commission d'experts sur l'impacts de l'exposition des jeunes aux écrans</h3>
             <p>Rapport redigé à la demande du président de la République Emmanuel Macron.</p>
         </div>
       </div>
